added mobile styles and intial heading layout

--- a/index.html
+++ b/index.html
@@ -8,6 +8,25 @@
   <title>Interspect</title>
 </head>
 <body>
-    <h1>Interspect</h1>
+    <header class="header" id="header">
+        <div class="skew">
+            <div class="header-inner">
+              <h1 class="logo">
+                <a href="/"><br /></a></h1>
+            </div>
+        </div>
+      </header>
+      <nav class="download">
+          <button class="button">Download for macOS</button> 
+      </nav>
+
+      <div class="hero"> 
+          <img src="./images/hero-illustration.svg" alt="hero" /> 
+      </div>
+      <main>
+         <h1>Interspect</h1>
+      </main>
+     
+          
 </body>
 </html>
