added column descriptions and flexbox styling

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,26 +8,61 @@
   <link rel="stylesheet" href="styles.css">
   <title>Interspect</title>
 </head>
-<body>
-    <header class="header" id="header">
-        <div class="skew">
-            <div class="header-inner">
-              <h1 class="logo">
-                <a href="/"><br /></a></h1>
-            </div>
-        </div>
-      </header>
-      <nav class="download">
-          <button class="button">Download for macOS</button> 
-      </nav>
 
-      <div class="hero"> 
-          <img src="./images/hero-illustration.svg" alt="hero" /> 
+<body>
+  <header class="header" id="header">
+    <div class="skew">
+      <div class="header-inner">
+        <h1 class="logo">
+          <a href="/">
+            <br />
+          </a>
+        </h1>
       </div>
-      <main>
-         <h1>Interspect</h1>
-      </main>
-     
-          
+    </div>
+  </header>
+  <nav class="download">
+    <button class="button">Download for macOS</button>
+  </nav>
+
+  <div class="hero">
+    <img src="./images/hero-illustration.svg" alt="hero" />
+  </div>
+  <main>
+    <h1>Interspect</h1>
+    <p>An open-source API-mocking tool to help ensure data interoperability between microservices</p>
+
+    <section class='some-page-wrapper'>
+      <div class='row'>
+        <div class='column'>
+          <div class='mockup-column'>
+            <img src="./images/mockup-icon.png" alt="mockup-icon" />
+            <h2>Quick mockup</h2>
+            <p>Modify data from a source microservice to creat mockups for easy testing</p>
+          </div>
+        </div>
+        <div class='column'>
+          <div class='batch-column'>
+              <img src="./images/batch-icon.png" alt="batch-icon" />
+              <h2>Batch testing</h2>
+              <p>Send HTTP request for each mockup in one click to speed up your work flow</p>
+          </div>
+        </div>
+        <div class='column'>
+          <div class='performance-column'>
+              <img src="./images/performance-icon.png" alt="performance-icon" />
+              <h2>Performance testing</h2>
+              <p>View network timming metrics for your tests to catch latency issues upfront</p>
+          </div>
+        </div>
+      </div>
+
+    </section>
+
+
+  </main>
+
+
 </body>
+
 </html>
