--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <h1>Interspect</h1>
     <p>An open-source API-mocking tool to help ensure data interoperability between microservices</p>
 
-    <section class='some-page-wrapper'>
+    <section class='description-wrapper'>
       <div class='row'>
         <div class='column'>
           <div class='mockup-column'>
