--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <div class="hero">
     <img src="./images/hero-illustration.svg" alt="hero" />
   </div>
-  <main>
+  <main class="center">
     <h1>Interspect</h1>
     <p>An open-source API-mocking tool to help ensure data interoperability between microservices</p>
 
@@ -56,12 +56,12 @@
           </div>
         </div>
       </div>
-
     </section>
-
-
   </main>
-
+  <section class='footer'> 
+      <h1>Learn more and contribute</h1>
+      <p>Interspect is XXX-Licensed and completly open source. You can find full documentation and contribution guidelines on <a href="https://github.com/oslabs-beta/Interspect" target="_blank">GitHub</a></p>
+    </section>
 
 </body>
 
