added github link URL

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
     <img src="./images/hero-illustration.svg" alt="hero" />
   </div>
   <main class="center">
+    <div class='beta-badge'>
+      <img src="./images/beta-badge.png" alt="beta-badge" />
+    </div>
+
     <h1>Interspect</h1>
     <p>An open-source API-mocking tool to help ensure data interoperability between microservices</p>
 
@@ -43,25 +47,27 @@
         </div>
         <div class='column'>
           <div class='batch-column'>
-              <img src="./images/batch-icon.png" alt="batch-icon" />
-              <h2>Batch testing</h2>
-              <p>Send HTTP request for each mockup in one click to speed up your work flow</p>
+            <img src="./images/batch-icon.png" alt="batch-icon" />
+            <h2>Batch testing</h2>
+            <p>Send HTTP request for each mockup in one click to speed up your work flow</p>
           </div>
         </div>
         <div class='column'>
           <div class='performance-column'>
-              <img src="./images/performance-icon.png" alt="performance-icon" />
-              <h2>Performance testing</h2>
-              <p>View network timming metrics for your tests to catch latency issues upfront</p>
+            <img src="./images/performance-icon.png" alt="performance-icon" />
+            <h2>Performance testing</h2>
+            <p>View network timming metrics for your tests to catch latency issues upfront</p>
           </div>
         </div>
       </div>
     </section>
   </main>
-  <section class='footer'> 
-      <h1>Learn more and contribute</h1>
-      <p>Interspect is XXX-Licensed and completly open source. You can find full documentation and contribution guidelines on <a href="https://github.com/oslabs-beta/Interspect" target="_blank">GitHub</a></p>
-    </section>
+  <section class='footer'>
+    <h1>Learn more and contribute</h1>
+    <p>Interspect is XXX-Licensed and completly open source. You can find full documentation and contribution guidelines on
+      <a href="https://github.com/oslabs-beta/Interspect" target="_blank">GitHub</a>
+    </p>
+  </section>
 
 </body>
 
