--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <section class='footer'>
     <h1>Learn more and contribute</h1>
     <p>Interspect is XXX-Licensed and completly open source. You can find full documentation and contribution guidelines on
-      <a href="https://github.com/oslabs-beta/Interspect" target="_blank">GitHub</a>
+      <a href="https://github.com/oslabs-beta/Interspect" target="_blank"><b>GitHub</b></a>
     </p>
   </section>
 
