add scroll ability

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+  <container> 
   <header class="header" id="header">
     <div class="skew">
       <div class="header-inner">
@@ -68,7 +69,7 @@
       <a href="https://github.com/oslabs-beta/Interspect" target="_blank"><b>GitHub</b></a>
     </p>
   </section>
-
+</container>
 </body>
 
 </html>
