--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
     </div>
 
     <h1>Interspect</h1>
-    <p>An open-source API-mocking tool to help ensure data interoperability between microservices</p>
+    <p>An open-source API-mocking tool to help ensure data interoperability between microservices without having to worry about test data set up or environment availability.
+        Interspect is specifically designed to maximize developer and tester productivity when working in autonomous or cross-functional product teams
+
+    </p>
 
     <section class='description-wrapper'>
       <div class='row'>
@@ -43,21 +46,21 @@
           <div class='mockup-column'>
             <img src="./images/mockup-icon.png" alt="mockup-icon" />
             <h2>Quick mockup</h2>
-            <p>Modify data from a source microservice to creat mockups for easy testing</p>
+            <p>Modify data from a source microservice to creat mockups for easy testing. Unblocking testers and developers waiting for APIs</p>
           </div>
         </div>
         <div class='column'>
           <div class='batch-column'>
             <img src="./images/batch-icon.png" alt="batch-icon" />
             <h2>Batch testing</h2>
-            <p>Send HTTP request for each mockup in one click to speed up your work flow</p>
+            <p>Send HTTP request for each mockup in one click to speed up your work flow. Reduce third-party transaction cost</p>
           </div>
         </div>
         <div class='column'>
           <div class='performance-column'>
             <img src="./images/performance-icon.png" alt="performance-icon" />
-            <h2>Performance testing</h2>
-            <p>View network timming metrics for your tests to catch latency issues upfront</p>
+            <h2>Performance</h2>
+            <p>View network timming metrics for your tests to catch latency issues upfront. Make your performance tests more reliable.</p>
           </div>
         </div>
       </div>
