added download link

--- a/index.html
+++ b/index.html
@@ -1,37 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="styles.css">
+  <meta charset='UTF-8'>
+  <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+  <meta http-equiv='X-UA-Compatible' content='ie=edge'>
+  <link rel='stylesheet' href='styles.css'>
   <title>Interspect</title>
 </head>
 
 <body>
   <container> 
-  <header class="header" id="header">
-    <div class="skew">
-      <div class="header-inner">
-        <h1 class="logo">
-          <a href="/">
+  <header class='header' id='header'>
+    <div class='skew'>
+      <div class='header-inner'>
+        <h1 class='logo'>
+          <a href='/'>
             <br />
           </a>
         </h1>
       </div>
     </div>
   </header>
-  <nav class="download">
-    <button class="button">Download for macOS</button>
+  <nav class='download'>
+    <button onclick='window.location.href ="https://github.com/oslabs-beta/Interspect/releases/download/1.0/Interspect-macOS-x64.zip";'class='button'>Download for macOS</button>
   </nav>
 
-  <div class="hero">
-    <img src="./images/hero-illustration.svg" alt="hero" />
+  <div class='hero'>
+    <img src='./images/hero-illustration.svg' alt='hero' />
   </div>
-  <main class="center">
+  <main class='center'>
     <div class='beta-badge'>
-      <img src="./images/beta-badge.png" alt="beta-badge" />
+      <img src='./images/beta-badge.png' alt='beta-badge' />
     </div>
 
     <h1>Interspect</h1>
@@ -44,21 +44,21 @@
       <div class='row'>
         <div class='column'>
           <div class='mockup-column'>
-            <img src="./images/mockup-icon.png" alt="mockup-icon" />
+            <img src='./images/mockup-icon.png' alt='mockup-icon' />
             <h2>Quick mockup</h2>
             <p>Modify data from a source microservice to creat mockups for easy testing. Unblocking testers and developers waiting for APIs</p>
           </div>
         </div>
         <div class='column'>
           <div class='batch-column'>
-            <img src="./images/batch-icon.png" alt="batch-icon" />
+            <img src='./images/batch-icon.png' alt='batch-icon' />
             <h2>Batch testing</h2>
             <p>Send HTTP request for each mockup in one click to speed up your work flow. Reduce third-party transaction cost</p>
           </div>
         </div>
         <div class='column'>
           <div class='performance-column'>
-            <img src="./images/performance-icon.png" alt="performance-icon" />
+            <img src='./images/performance-icon.png' alt='performance-icon' />
             <h2>Performance</h2>
             <p>View network timming metrics for your tests to catch latency issues upfront. Make your performance tests more reliable.</p>
           </div>
@@ -69,7 +69,7 @@
   <section class='footer'>
     <h1>Learn more and contribute</h1>
     <p>Interspect is XXX-Licensed and completly open source. You can find full documentation and contribution guidelines on
-      <a href="https://github.com/oslabs-beta/Interspect" target="_blank"><b>GitHub</b></a>
+      <a href='https://github.com/oslabs-beta/Interspect' target='_blank'><b>GitHub</b></a>
     </p>
   </section>
 </container>
