Tweaked fonts and other styles

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
     <img src='./images/hero-illustration.svg' alt='hero' />
   </div>
   <main class='center'>
-    <div class='beta-badge'>
-      <img src='./images/beta-badge.png' alt='beta-badge' />
-    </div>
+    <header>
+        <img src='./images/beta-badge.png' alt='beta-badge' />
+        <h1>Interspect</h1>
+    </header>
 
-    <h1>Interspect</h1>
-    <p>An open-source API-mocking tool to help ensure data interoperability between microservices without having to worry about test data set up or environment availability.
-        Interspect is specifically designed to maximize developer and tester productivity when working in autonomous or cross-functional product teams
+    <p>An open-source API-mocking tool to help ensure data interoperability between microservices without having to worry about test data setup or environment availability.
+        Interspect is specifically designed to maximize developer and tester productivity when working in autonomous or cross-functional product teams.
 
     </p>
 
@@ -67,8 +67,8 @@
     </section>
   </main>
   <section class='footer'>
-    <h1>Learn more and contribute</h1>
-    <p>Interspect is XXX-Licensed and completly open source. You can find full documentation and contribution guidelines on
+    <h2>Learn more and contribute</h2>
+    <p>Interspect is MIT-Licensed and completly open source. You can find full documentation and contribution guidelines on
       <a href='https://github.com/oslabs-beta/Interspect' target='_blank'><b>GitHub</b></a>
     </p>
   </section>
