Adjusted responsive layout styles and added “Learn more” link

--- a/index.html
+++ b/index.html
@@ -40,38 +40,38 @@
 
     </p>
 
-    <section class='description-wrapper'>
-      <div class='row'>
-        <div class='column'>
-          <div class='mockup-column'>
-            <img src='./images/mockup-icon.png' alt='mockup-icon' />
-            <h2>Quick mockup</h2>
-            <p>Modify data from a source microservice to creat mockups for easy testing. Unblocking testers and developers waiting for APIs</p>
-          </div>
-        </div>
-        <div class='column'>
-          <div class='batch-column'>
-            <img src='./images/batch-icon.png' alt='batch-icon' />
-            <h2>Batch testing</h2>
-            <p>Send HTTP request for each mockup in one click to speed up your work flow. Reduce third-party transaction cost</p>
-          </div>
-        </div>
-        <div class='column'>
-          <div class='performance-column'>
-            <img src='./images/performance-icon.png' alt='performance-icon' />
-            <h2>Performance</h2>
-            <p>View network timming metrics for your tests to catch latency issues upfront. Make your performance tests more reliable.</p>
-          </div>
-        </div>
-      </div>
+    <a href="https://github.com/oslabs-beta/Interspect" class="secondary-cta">Learn more →</a>
+
+    <section class="features">
+      <article class="feature">
+        <header>
+          <img src='./images/mockup-icon.png' alt='mockup-icon' />
+          <h2>Quick mockup</h2>
+        </header>
+        <p>Modify data from a source microservice to creat mockups for easy testing. Unblocking testers and developers waiting for APIs</p>
+      </article>
+      <article class="feature">
+        <header>
+          <img src='./images/batch-icon.png' alt='batch-icon' />
+          <h2>Batch testing</h2>
+        </header>
+        <p>Send HTTP request for each mockup in one click to speed up your work flow. Reduce third-party transaction cost</p>
+      </article>
+      <article class="feature">
+        <header>
+          <img src='./images/performance-icon.png' alt='performance-icon' />
+          <h2>Performance</h2>
+        </header>
+        <p>View network timming metrics for your tests to catch latency issues upfront. Make your performance tests more reliable.</p>
+      </article>
     </section>
   </main>
-  <section class='footer'>
+  <footer>
     <h2>Learn more and contribute</h2>
     <p>Interspect is MIT-Licensed and completly open source. You can find full documentation and contribution guidelines on
       <a href='https://github.com/oslabs-beta/Interspect' target='_blank'><b>GitHub</b></a>
     </p>
-  </section>
+  </footer>
 </container>
 </body>
 
