Add GitHub star button

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   </header>
   <nav class='download'>
     <button onclick='window.location.href ="https://github.com/oslabs-beta/Interspect/releases/download/1.0.0/Interspect-macOS-x64.zip";'class='button'>Download for macOS</button>
+    <a class="github-button" href="https://github.com/oslabs-beta/Interspect" data-icon="octicon-star" data-size="large" aria-label="Star oslabs-beta/Interspect on GitHub">Star</a>
   </nav>
 
   <div class='hero'>
@@ -73,6 +74,7 @@
     </p>
   </footer>
 </container>
+<script async defer src="https://buttons.github.io/buttons.js"></script>
 </body>
 
 </html>
