Minor typo fixes and copy updates

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <h1>Interspect</h1>
     </header>
 
-    <p>An open-source API-mocking tool to help ensure data interoperability between microservices without having to worry about test data setup or environment availability.
+    <p>An open source API-mocking tool to help ensure data interoperability between microservices, without having to worry about test data setup or environment availability.
         Interspect is specifically designed to maximize developer and tester productivity when working in autonomous or cross-functional product teams.
 
     </p>
@@ -47,23 +47,23 @@
       <article class="feature">
         <header>
           <img src='./images/mockup-icon.png' alt='mockup-icon' />
-          <h2>Quick mockup</h2>
+          <h2>Quick mockups</h2>
         </header>
-        <p>Modify data from a source microservice to creat mockups for easy testing. Unblocking testers and developers waiting for APIs</p>
+        <p>Modify data from a source microservice to create mockups for easy testing. Unblocking testers and developers waiting for APIs</p>
       </article>
       <article class="feature">
         <header>
           <img src='./images/batch-icon.png' alt='batch-icon' />
           <h2>Batch testing</h2>
         </header>
-        <p>Send HTTP request for each mockup in one click to speed up your work flow. Reduce third-party transaction cost</p>
+        <p>Send HTTP requests for each mockup in one click to speed up your workflow and reduce third-party transaction costs</p>
       </article>
       <article class="feature">
         <header>
           <img src='./images/performance-icon.png' alt='performance-icon' />
           <h2>Performance</h2>
         </header>
-        <p>View network timming metrics for your tests to catch latency issues upfront. Make your performance tests more reliable.</p>
+        <p>View network timing metrics for your tests to catch latency issues upfront. Make your performance tests more reliable.</p>
       </article>
     </section>
   </main>
